# leosatpy

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  analyseSatObs.py  calibrateSatObs.py  leosatpy_config.ini  pyproject.toml  reduceSatObs.py  requirements.txt  setup.py  version.py
config/: base_conf.py  telescope_conf.py
docs/source/: acknowledgements.rst  citing.rst  conf.py  configfile.rst  contributing.rst  example.rst  index.rst  installation.rst  todo.rst  usage.rst
leosatpy/: analyseSatObs.py  calibrateSatObs.py  leosatpy_config.ini  reduceSatObs.py
leosatpy/utils/: arguments.py  base_conf.py  dataset.py  photometry.py  satellites.py  select_trail.py  sources.py  tables.py  telescope_conf.py  transformations.py  version.py
utils/: arguments.py  dataset.py  photometry.py  satellites.py  sources.py  tables.py  transformations.py
